# rust-lib

./: .gitignore  .rustfmt.toml  Cargo.toml  GUIDE.md  Makefile  README.md  docker-compose.yaml
app/: Cargo.toml
app/examples/: example.rs
app/src/: any_app.rs  app.rs  broadcast_app.rs  lib.rs  prelude.rs  service.rs  service_app.rs  service_runner.rs
app/tests/: okaying.rs
async_logger/: Cargo.toml
async_logger/src/: lib.rs
blockchain/: Cargo.toml
blockchain/src/: cold_wallets.rs  lib.rs  wallets.rs
config/: Cargo.toml
config/src/: env.rs
config/src/env/: database.rs  env.rs  env_loaded.rs  healthchecker.rs  mod.rs  nats.rs  nats_v2.rs
db/: Cargo.toml
db/src/: lib.rs
error_registry/: Cargo.toml  build.rs
error_registry/src/: custom_errors.rs  generated_errors.rs  lib.rs
error_registry_new/: Cargo.toml  error-registry-task.md
error_registry_new/src/: generated_errors.rs  lib.rs
healthchecker/: Cargo.toml
healthchecker/src/: lib.rs
inner_db/: Cargo.toml
inner_db/src/: client_inner.rs  client_inner_builder.rs  lib.rs
logger/: Cargo.toml
logger/src/: lib.rs
primitives/: Cargo.toml
primitives/adapter/: mod.rs  response.rs
primitives/listener/: events.rs  mod.rs
primitives/src/: block.rs  config.rs  lib.rs  request.rs
request/: Cargo.toml
request/src/: lib.rs
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
schemas/: Cargo.toml  build.rs
schemas/schemas-generator/: Cargo.toml
schemas/schemas-generator/src/: access_level.rs  agent.rs  agent_params.rs  agents.rs  agents_generator.rs  env_loader.rs  get_first_schema.rs  lib.rs  manager.rs  schema_declaration.rs
schemas/schemas-generator/src/rust_lib_schemas/: all_schemas.rs  schema_names.json
schemas/schemas-generator/src/types/: array.rs  empty.rs  integer.rs  mod.rs  object.rs  str.rs
schemas/schemas/src/generated_schemas/: mod.rs  prelude.rs
schemas/src/: common.rs  lib.rs  manager.rs
schemas/src/generated_schemas/: mod.rs  prelude.rs  utils.rs
schemas/src/generated_schemas/achievements/: achievement_achievement_complete.rs  achievement_get_all_achievements.rs  achievement_get_users_achievements.rs  mod.rs
schemas/src/generated_schemas/admin/: action_delete_by_action_id.rs  action_get_action_list.rs  action_get_all_by_filter_list.rs  action_undo.rs  confirmation_add.rs  confirmation_add_solution_admin.rs  confirmation_add_solution_admin_for_many.rs  confirmation_delete_action.rs  confirmation_get_all_actions.rs  confirmation_get_not_confirmed_actions.rs  mail_template_change.rs  mail_template_create.rs  mail_template_delete.rs  mail_template_get_all.rs  mail_template_get_by_key.rs  mod.rs  option_get.rs  option_get_all_by_filter.rs  option_get_by_scope.rs  option_get_list.rs  option_set.rs  option_unset.rs  option_update.rs  option_update_all.rs  permission_add.rs  permission_delete.rs  permission_update_permissions.rs  role_add.rs  role_delete.rs  role_get_all_roles.rs  role_get_permissions_by_role_name.rs  role_get_role_by_name.rs  role_get_users_by_role.rs  user_role_add.rs  user_role_delete_user_role.rs  user_role_get_all.rs  user_role_get_all_users_with_nickname.rs  user_role_get_all_with_nickname.rs  user_role_get_my_role.rs  user_role_is_admin.rs
schemas/src/generated_schemas/analytics/: analytics_get.rs  analytics_send.rs  mod.rs
schemas/src/generated_schemas/auth/: admin_add_role_to_user.rs  admin_add_user_role.rs  admin_delete_user_role.rs  admin_get_my_role.rs  admin_get_user_role.rs  admin_get_users.rs  admin_login.rs  admin_update_user_role.rs  auth_assign_provider_account_to_device_id.rs  auth_change_my_email.rs  auth_change_password.rs  auth_confirm_email_by_code.rs  auth_confirm_email_by_hash.rs  auth_confirm_password.rs  auth_create_request_to_change_email.rs  auth_create_request_to_confirm_email.rs  auth_delete_email_request.rs  auth_delete_my_user.rs  auth_device_assign_internal_id_to_provider_id.rs  auth_device_delete_account.rs  auth_device_get_client_info.rs  auth_device_get_client_status_by_internal_user_id.rs  auth_device_get_device_id_by_internal_id.rs  auth_device_get_keycloak_provider_id_by_user_id.rs  auth_device_get_login_device_by_user_id.rs  auth_device_get_or_create_internal_user_id.rs  auth_device_get_provider_by_internal_user_id.rs  auth_device_is_authorized.rs  auth_device_is_new_client.rs  auth_device_is_new_client_in_app.rs  auth_device_logout_all_devices.rs  auth_device_logout_device_by_keycloak_id.rs  auth_device_update_internal_id_by_device_id.rs  auth_device_update_provider_status_by_internal_user_id.rs  auth_device_update_provider_status_by_provider_id.rs  auth_disable_user.rs  auth_empty_method.rs  auth_get_access_token_by_refresh.rs  auth_get_all_my_active_sessions.rs  auth_get_user_info_by_token.rs  (+37 more)
topics/: Cargo.toml  build.rs
topics/parser/: Cargo.toml
topics/parser/src/: import.rs  lib.rs  topic.rs  utils.rs
topics/src/: custom.rs  lib.rs  topics.rs
transport/: Cargo.toml
transport/examples/: send_and_observe.rs
transport/examples/jet/: main.rs
transport/examples/jet-raw/: main.rs
transport/examples/message_sender/: main.rs
transport/examples/nats/: main.rs
transport/examples/nats_v2/: main.rs
transport/examples/nats_v2_one_shot/: main.rs
transport/examples/nats_v2_raw/: main.rs
transport/examples/nats_v2_timeout/: main.rs
transport/src/: common.rs  jet.rs  lib.rs  nats.rs  nats_v2.rs  traits.rs
transport/src/message/: jet.rs  mod.rs  stan.rs
transport/src/response/: mod.rs  stan.rs
transport/src/subscription/: jet.rs  mod.rs  stan.rs
transport/src/transport/: jet_stream.rs  mod.rs  stan.rs
transport/tests/: jetstream.rs  okaying.rs
types/: Cargo.toml  build.rs
types/parser/: mod.rs  parameter.rs  schema.rs  schemas_generator.rs  schemas_loader.rs  traits.rs
types/parser/types/: array.rs  bool.rs  integer.rs  mod.rs  number.rs  object.rs  str.rs
types/src/: lib.rs  requests.rs
types/src/common/: traits.rs
types/src/rust_byte_api_gateway/: full_schemas.rs
types/src/schemas/: mod.rs
vault/: Cargo.toml  README.md
vault/src/: crypto.rs  lib.rs  vault.rs
(+974 files in other folders)
