[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "byte-formatter",
    "config",
    "macros",
    "topics",
    "topics/parser",
    "error_registry",
    "transport",
    "types",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
realis-macros = { path = "./macros", optional = true }
error_registry = { path = "./error_registry", optional = true }

serde = { version = "1.0.129", optional = true }
reqwest = { version = "0.11.4", optional = true }
tokio = { version = "1.11.0", optional = true }
slog = { version = "2.7", optional = true }
hashicorp_vault = { version = "2.1.0", optional = true }
derive_more = { version = "0.99.17", optional = true }
slog-envlogger = { version = "2.2", optional = true }
convert_case = { version = "0.5.0", optional = true }
slog-stdlog = { version ="4.1.0", optional = true }
serde_json = { version = "1.0.66", optional = true }
tokio-service = { version = "0.1", optional = true }
block-modes = { version = "0.8.1", optional = true }
thiserror = { version = "1.0.26", optional = true }
tokio-proto = { version = "0.1", optional = true }
slog-term = { version = "2.8.0", optional = true }
slog-scope = { version = "4.3", optional = true }
futures = { version = "0.1.11", optional = true }
slog-async = { version = "2.5", optional = true }
colored = { version = "2.0.0", optional = true }
chrono = { version = "0.4.19", optional = true }
dotenv = { version = "0.15.0", optional = true }
log = { version = "0.4.14", optional = true }
aes = { version = "0.7.5", optional = true }
rawsql = { version = "0.1.0", optional = true }
itertools = { version = "0.10.3", optional = true }

# iner_db
tokio-postgres = { version = "0.7.2", optional = true }
postgres-openssl = { version = "0.5.0", optional = true }
openssl = {version = "0.10.38", optional = true }
deadpool-postgres = { version = "0.10.1", optional = true }
backoff = { version = "0.4.0", optional = true }

#[dev-dependencies]
#rustc-serialize = "0.3"
#num_cpus = "1.0"

# Custom dependencies
[dependencies.realis-primitives]
git = "https://github.com/RealisNetwork/Realis.Network.git"
branch = "main"
package = "realis-primitives"
optional = true

[dependencies.runtime]
git =  "https://github.com/RealisNetwork/Realis.Network.git"
branch = "main"
package = "node-runtime"
optional = true

[dependencies.sp-core]
git = "https://github.com/RealisNetwork/substrate.git"
branch = "polka_v0.9.9"
optional = true

[dependencies.sp-runtime]
version = "4.0.0-dev"
git = "https://github.com/RealisNetwork/substrate.git"
branch = "polka_v0.9.9"
optional = true


[dependencies.substrate-api-client]
git = "https://github.com/RealisNetwork/substrate-api-client.git"
branch = "polka_v0.9.9"
optional = true

[dependencies.tokio-minihttp]
git = "https://github.com/tokio-rs/tokio-minihttp.git"
optional = true

[features]
full = [
    "async_logger",
    "config",
    "healthchecker",
    "ser_des-types",
    "nats",
    "vault",
    "macros",
    "db",
    "blockchain",
    "realis-macros",
]

macros = [
    "realis-macros",
]

async_logger = [
    "colored",
    "slog",
    "slog-envlogger",
    "slog-scope",
    "slog-term",
    "slog-async",
    "slog-stdlog",
]

blockchain = [
    "reqwest/json",
    "runtime",
    "serde",
    "substrate-api-client",
    "sp-runtime/std",
    "sp-core/std",
]

config = [
    "log",
    "dotenv",
]

healthchecker = [
    "tokio/full",
    "futures",
    "tokio/time",
    "tokio-minihttp",
    "tokio-proto",
    "tokio-service",
]

db = [
    "error_registry",
    "tokio/default",
    "postgres-openssl",
    "tokio-postgres",
    "openssl",
    "rawsql",
    "log",
    "itertools",
    "deadpool-postgres",
    "backoff",
]

ser_des-types = [
    "serde/derive",
    "realis-primitives",
]

nats = [
    "serde",
    "serde_json",
    "log",
    "colored",
]

vault = [
    "aes",
    "block-modes",
    "hashicorp_vault",
]
