[workspace]
members = [
    "byte-formatter",
    "config",
    "error_registry",
    "macros",
    "topics",
    "topics/parser",
    "transport",
    "types",
    "vault",
    "async_logger",
    "blockchain",
    "json",
    "nats",
    "inner_db",
    "healthchecker",
    "error_registry_new",
]
