[workspace]
members = [
    "byte-formatter",
    "config",
    "error_registry",
    "macros",
    "topics",
    "topics/parser",
    "transport",
    "types",
    "vault",
    "async_logger",
    "blockchain",
    "json",
    "inner_db",
    "healthchecker",
]

[package]
name = "realis-lib"
version = "0.1.0"
edition = "2021"
authors = [""]
license = "MIT OR Apache-2.0"
documentation = ""
homepage = "https://realis.network/"
repository = "https://github.com/RealisNetwork/rust-lib.git"
readme = "README.md"
description = "Realis Rust library"
keywords = ["blockchain"]
