[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transport = { path = "../transport" }
error_registry = { path = "../error_registry" }
healthchecker = { path = "../healthchecker" }
async-trait = "0.1.56"
serde_json = "1.0.81"
futures = "0.3.21"
serde = "1.0.137"
log = "0.4.17"
tokio = "1.19.2"

[dev-dependencies]
nats = "0.9.18"
serde = "1.0.137"
stan = "0.0.16"
tokio = "1.19.2"

[[example]]
name = "example"
path = "examples/example.rs"
