[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realis-macros = {path = "../macros"}
dotenv = "0.15.0"
log = "0.4.14"
hex = "0.4.3"

transport = { path = "./../transport", optional = true }
inner_db = { path = "./../inner_db", optional = true }
healthchecker = { path = "./../healthchecker"}
error_registry = { path = "./../error_registry"}

[features]
nats = [
    "transport/nats",
]
database = [
    "inner_db",
]

