[package]
name = "error_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio-postgres = "0.7.6"
deadpool = "0.9.5"
backtrace = "0.3"

serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.16.1", features = ["time"]}

[build-dependencies]
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
octocrab = "0.15.3"
tokio = { version = "1.16.1", features = ["rt-multi-thread"]}
reqwest = { version = "0.11.7", features = ["blocking"] }
convert_case = "0.5.0"
quote = "1.0.15"
syn = "1"
dotenv = "0.15.0"


[features]
rebuild = [
]