[package]
name = "error_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratsio = { git = "https://github.com/RealisNetwork/ratsio.git" }
tokio-postgres = "0.7.6"
deadpool = "0.9.5"
deadpool-postgres = "0.10.2"
backtrace = "0.3"
hex = "0.4.3"
dotenv = "0.15.0"
openssl = "0.10.33"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.16.1" }
serde_json = "1.0.78"
sqlx = { version = "0.6.0", features = ["offline", "runtime-tokio-rustls"] }
redis = "0.21.5"

[build-dependencies]
octocrab = { version = "0.16.0", optional = true }
tokio = { version = "1.16.1", optional = true }
reqwest = { version = "0.11.7", optional = true }
convert_case = { version = "0.5.0", optional = true }
quote = { version = "1.0.15", optional = true }
syn = { version = "1", optional = true }
dotenv = { version = "0.15.0", optional = true }
serde_json = { version = "1.0.78", optional = true }
serde = { version = "1.0.136", optional = true }

[features]
rebuild = [
    "octocrab",
    "tokio/rt-multi-thread",
    "reqwest/blocking",
    "convert_case",
    "quote",
    "syn",
    "dotenv",
    "serde_json",
    "serde/derive",
]
