[package]
name = "error_registry_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error_registry = { path = "./../error_registry"}

backtrace = "0.3"
serde_json = "1.0.0"
serde = "1.0.0"
tokio = "1.18.2"
