[package]
name = "healthchecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
error_registry = { path = "./../error_registry"}
tokio = { version = "1.20.1", default-features = false }
#futures = { version = "0.3.21" }
log = "0.4.17"
async-trait = "0.1.56"
hyper = { version = "0.14.20", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
serde_json = "1.0.85"
