[package]
name = "inner_db"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-postgres = { version = "0.10.1"}
deadpool = { version="0.9.2" }
backoff = { version = "0.4.0"}
error_registry = { path = "./../error_registry"}
itertools = { version = "0.10.3"}
log = { version = "0.4.14"}
rawsql = { version = "0.1.1" }
openssl = {version = "0.10.38"}
postgres-openssl = { version = "0.5.0" }
tokio-postgres = { version = "0.7.2" }
