[package]
name = "primitives"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom dependencies
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives" }
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }

#
substrate-api-client = { git = "https://github.com/Daelon02/substrate-api-client.git" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "03d4d0d7c129eec3d3ab2876bddbe5d6dfa1f178" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.129", features = ["derive"] }
tokio-postgres = "0.7.1"
serde_json = "1.0.66"
thiserror = "1.0.26"
dotenv = "0.15.0"
