[package]
name = "request"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
primitives = { path = "../primitives" }
serde = "1.0.30"
serde_json = "1.0.68"
db = { path = "../db" }
