[package]
name = "rust-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config = { path = "../config" }
db = { path = "../db" }
hashing = { path = "../hashing" }
healthchecker = { path = "../healthchecker" }
logger = { path = "../logger" }
nats = { path = "../nats" }
primitives = { path = "../primitives" }
request = { path = "../request" }
utils = { path = "../utils" }
