[package]
name = "rust-lib"
version = "0.0.1"
repository = "https://github.com/RealisNetwork/rust-lib"
edition = "2018"

[dependencies]
config = { path = "../config" }
db = { path = "../db" }
hashing = { path = "../hashing" }
healthchecker = { path = "../healthchecker" }
logger = { path = "../logger" }
nats = { path = "../nats" }
primitives = { path = "../primitives" }
request = { path = "../request" }
utils = { path = "../utils" }
