[package]
name = "schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error_registry = { path = "../error_registry" }
#schemas-generator = { path = "schemas-generator" }

serde_json = "1.0.82"
serde = "1.0.138"

[build-dependencies]
schemas-generator = { path = "schemas-generator" }
config = { git = "https://github.com/RealisNetwork/rust-lib.git" }
quote = "1.0.20"
syn = "1.0.98"

[features]
default = []
rebuild = []