[package]
name = "schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error_registry = { path = "../error_registry" }
#schemas-generator = { path = "schemas-generator" }

serde_json = "1.0.82"
serde = "1.0.138"

[build-dependencies]
schemas-generator = { path = "schemas-generator", optional = true }
config = { git = "https://github.com/RealisNetwork/rust-lib.git", optional = true }
quote = { version = "1.0.20", optional = true }
syn = { version = "1.0.98", optional = true }

[features]
default = []
rebuild = [
    "schemas-generator",
    "config",
    "quote",
    "syn",
]