[package]
name = "topics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
dotenv = { version = "0.15.0", optional = true }
config = { path = "../config" }
parser = { path = "parser", optional = true }
quote = "1.0.15"

[features]
rebuild = [
    "dotenv",
    "parser",
]

rebuild_local = [
    "rebuild",
    "parser",
]