[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["sync", "time"] }
error_registry = { path = "../error_registry" }
error_registry_new = {path = "../error_registry_new" }


ratsio = { git = "https://github.com/RealisNetwork/ratsio.git", optional = true }
jet-nats = { package = "nats", version = "0.18.1", optional = true }

[dev-dependencies]
# for jet-raw examples 
jet-nats = { package = "nats", version = "0.18.1" }
serde_json = "1.0.79"
# for jet examples
tokio = { version = "1.17.0", features = ["full"] }
# for nats examples
ratsio = { git = "https://github.com/RealisNetwork/ratsio.git" }


[features]
nats = [
    "ratsio",
]

jet = [
    "jet-nats",
]


[[example]]
name = "jet"
path = "examples/jet/main.rs"
required-features = ["jet"]

[[example]]
name = "jet-raw"
path = "examples/jet-raw/main.rs"

[[example]]
name = "nats"
path = "examples/nats/main.rs"
required-features = ["nats"]
