[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[dependencies]
error_registry = { path = "../error_registry" }

async-trait = "0.1.56"
enum_dispatch = "0.3.8"
serde_json = "1.0.81"
serde = "1.0.137"
tokio = "1.20.1"
stan = "0.0.16"
nats = "0.9.18"
log = "0.4.17"
uuid = { version = "1.1.2", features = ["v4"]}
healthchecker = { path = "./../healthchecker" }
jet_stream = { version = "0.22.0", package = "nats" }
backtrace = "0.3.66"


[dev-dependencies]
app = { path = "./../app" }
healthchecker = { path = "./../healthchecker" }
