[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lib = { path = "../../rust-lib", features = ["ser_des-types"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
error_registry = { path = "../error_registry" }
deadpool = "0.9.2"
tokio-postgres = "0.7.5"

[dependencies.runtime]
git =  "https://github.com/RealisNetwork/Realis.Network.git"
branch = "main"
package = "realis-node-runtime"
optional = true

[features]
schemas = [
    "rust-lib/ser_des-types",
]
