[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-api-client = { git = "https://github.com/RealisNetwork/substrate-api-client.git", branch = "polka_v0.9.9", optional = true}
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-node-runtime" }
blockchain = { path = "./../blockchain" }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
error_registry = { path = "../error_registry" }
deadpool = "0.9.5"
tokio-postgres = "0.7.6"
web3 = "0.17.0"
uuid = { version = "1.0.0" }
json = { path = "./../json",  optional = true }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives" ,  optional = true}

[build-dependencies]
config = { path = "./../config" , features = ["database", "nats"] , optional = true }
syn = { version = "1", features = ["full", "parsing"], optional = true }
serde = { version = "1.0.132", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
convert_case = { version = "0.5.0", optional = true }
serde_json = { version = "1.0.73", optional = true }
octocrab = { version = "0.15.3", optional = true }
reqwest = { version = "0.11.7", optional = true }
quote = { version = "1.0.10", optional = true }


[features]
schemas = [
    "substrate-api-client",
    "json",
    "realis-primitives",
]
rebuild = [
    "config",
    "syn/full",
    "syn/parsing",
    "reqwest/json",
    "reqwest/blocking",
    "serde/derive",
    "tokio/full",
    "octocrab",
    "quote",
    "convert_case",
    "serde_json",
]
