[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashicorp_vault = { version = "2.1.0", optional = true }
block-modes = { version = "0.8.1", optional = true }
serde = { version = "1.0.129", optional = true }
aes = { version = "0.7.5", optional = true }

[dev-dependencies]
dotenv = "0.15.0"

[features]
default = ["crypto", "vault"]

crypto = [
	"block-modes",
	"aes",
]

vault = [
	"hashicorp_vault",
	"serde",
]