[package]
name = "schemas-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { git = "https://github.com/RealisNetwork/rust-lib.git" }
error_registry = { git = "https://github.com/RealisNetwork/rust-lib.git" }

serde_json = "1.0.82"
serde = "1.0.138"
octocrab = "0.16.0"
reqwest = { version = "0.11.11", features = ["json"]}
tokio = "1.19.2"
quote = "1.0.20"
convert_case = "0.5.0"
syn = "1.0.98"
anyhow = "1.0.58"
async-trait = "0.1.56"
