[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
convert_case = "0.5.0"
octocrab = "0.15.3"
tokio = "1.15.0"
quote = "1.0.15"
syn = "1"